--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ __pycache__/
 Practice.ipynb
 Practice\ 2.ipynb
 index.html
+Mission_to_Mars_Challenge_starter_code.ipynb
 # Distribution / packaging
 .Python
 build/
